toDouble from Object too, fixed Deprecation